Cleanup, quick fix.

--- a/src/gwt/client/shell/DynamicMessages.properties
+++ b/src/gwt/client/shell/DynamicMessages.properties
@@ -371,7 +371,7 @@ m_game_plays_bling_awarded = Game developer bling pool award for <a href="/#game
 #
 # Me page / Profile News Feed categories (see FeedMessageType)
 
-feedCategory1 = System Announcements
+feedCategory1 = Whirled Announcements
 feedCategory100 = Friendings
 feedCategory101 = Updated Rooms
 feedCategory102 = Game Trophies
@@ -380,5 +380,5 @@ feedCategory104 = Levelling
 feedCategory105 = Passport Stamps
 feedCategory200 = Whirled Announcements
 feedCategory300 = Comments
-feedCategory301 = Item Comments
+feedCategory301 = Comments
 feedCategory999 = UNUSED
