Display room updates of whirleds you belong to on the news feed, and clean up how feed items are grouped into categories.  WRLD-433

--- a/src/gwt/client/shell/DynamicMessages.properties
+++ b/src/gwt/client/shell/DynamicMessages.properties
@@ -369,16 +369,13 @@ m_support_adjust = Adjustment made by Whirled staff, <a href="/#people-{1}">{0}<
 m_game_plays_bling_awarded = Game developer bling pool award for <a href="/#games-d_{0}">{1}</a>.
 
 #
-# Me page / Profile News Feed categories (see FeedMessageType)
+# Me page / Profile News Feed categories (see FeedMessageType.Category)
 
-feedCategory1 = Whirled Announcements
-feedCategory100 = Friendings
-feedCategory101 = Updated Rooms
-feedCategory102 = Game Trophies
-feedCategory103 = New Shop Listings
-feedCategory104 = Levelling
-feedCategory105 = Passport Stamps
-feedCategory200 = Whirled Announcements
-feedCategory300 = Comments
-feedCategory301 = Comments
-feedCategory999 = UNUSED
+feedCategory0 = Whirled Announcements
+feedCategory1 = Comments
+feedCategory2 = Friendings
+feedCategory3 = New Shop Listings
+feedCategory4 = Game Trophies
+feedCategory5 = Updated Rooms
+feedCategory6 = Passport Stamps
+feedCategory7 = Levelling
