--- a/src/gwt/client/person/PersonMessages.properties
+++ b/src/gwt/client/person/PersonMessages.properties
@@ -15,6 +15,7 @@ fullFeed = Show more...
 shortFeed = Show less...
 yesterday = Yesterday:
 feedProfileMemberUnknown = Someone
+feedProfileMemberYou = <b>You</b>
 
 # Global Feed Messages
 
@@ -22,16 +23,14 @@ globalAnnouncement = Announcement: {0}
 
 # Friend Feed Messages
 
-friendAddedFriend =  {0} and {1} are now friends.
-friendAddedFriends =  {0} is now friends with {1}.
-friendAddedFriendsRight = {0} are now friends with {1}.
-friendUpdatedRoom = {0} has updated their room {1}.
-friendUpdatedRooms = {0} has updated their rooms: {1}.
+friendAddedFriend =  {0} befriended {1}.
+friendUpdatedRoom = {0} updated the room {1}.
+friendUpdatedRooms = {0} updated the rooms: {1}.
 friendsUpdatedRoom = Your friends have updated their rooms: {0}.
 friendWonTrophy = {0} earned the {1} trophy.
 friendWonTrophies = {0} earned the {1} trophies.
-friendListedItem = {0} has added {1} to the shop.
-friendGainedLevel = {0} has reached level {1}.
+friendListedItem = {0} added {1} to the shop.
+friendGainedLevel = {0} reached level {1}.
 friendsGainedLevel = Your friends have reached new levels: {0}.
 friendWonBadge = {0} earned the {1} stamp.
 friendWonBadges = {0} earned the {1} stamps.
