Whirleds are called Groups now. The "Enter Whirled" button text replaced with "Enter Hall". Still eventually needing changing:     - The image that asks you to "Click to see a live view of this Whirled".     - Changing #whirleds to #groups in the URL?

--- a/src/gwt/client/shell/ShellMessages.properties
+++ b/src/gwt/client/shell/ShellMessages.properties
@@ -37,7 +37,7 @@ charRemaining = (Characters remaining: {0})
 menuMe = Me
 menuStuff = Stuff
 menuRooms = Rooms
-menuWorlds = Whirleds
+menuWorlds = Groups
 menuGames = Games
 menuShop = Shop
 menuHelp = Help
