--- a/src/gwt/client/whirleds/WhirledsMessages.properties
+++ b/src/gwt/client/whirleds/WhirledsMessages.properties
@@ -16,8 +16,8 @@ forumPermsManager = Managers
 
 errUnknownPolicy = Internal Error! Unknown policy type: {0}
 
-groupTitle = Whirleds
-myWhirledsTitle = My Whirleds
+groupTitle = Groups
+myWhirledsTitle = My Groups
 forumsTitle = Discussions
 myForumsTitle = My Discussions
 issuesTitle = Issues
@@ -28,7 +28,7 @@ groupEst = Est. {0}
 #
 # GroupEdit
 
-editCreateTitle = Create Whirled
+editCreateTitle = Create Group
 
 editName = Name
 editLogo = Logo
@@ -42,27 +42,27 @@ editCharter = Charter
 editCatalogType = Shop Browse Type
 editCatalogTag = Shop Tag
 
-errInvalidGroupName = The whirled name must start with a character or number.
-errTagsOnExclusive = In order to change the whirled policy to Exclusive, please remove all tags.
+errInvalidGroupName = The group name must start with a character or number.
+errTagsOnExclusive = In order to change the group policy to Exclusive, please remove all tags.
 
 #
 # GalaxyPanel
 
-galaxyIntro = Whirleds can be explored or you can just hang out in them and chat \
+galaxyIntro = Groups can be explored or you can just hang out in them and chat \
   with other players.
 
-galaxyCreateTitle = Create a New Whirled
+galaxyCreateTitle = Create a New Group
 galaxyCreateBlurb = If you think you and your friends have the chops to create \
   an exciting place for people to hang out, then you should create your own \
-  whirled!
-galaxyCreate = Create New Whirled
+  group!
+galaxyCreate = Create New Group
 
-galaxyBrowseTitle = Browse Whirleds
+galaxyBrowseTitle = Browse Groups
 galaxySearch = Search
 
 galaxyMemberCount = {0} people online
 
-galaxyNoGroups = No whirleds found!
+galaxyNoGroups = No groups found!
 
 galaxyPopularTags = Popular Tags:
 galaxyNoPopularTags = No popular tags found!
@@ -78,23 +78,23 @@ detailHall = Hall
 detailHomepage = Homepage
 detailBy = by
 
-detailEnter = Enter Whirled
+detailEnter = Enter hall
 detailForums = Discussions
 
 detailMembers = Members
 
-detailEdit = Edit this Whirled
+detailEdit = Edit this group
 detailReadCharter = Read Charter
 detailManageRooms = Manage Rooms
 detailPlayGame = Play the Game!
 
-detailJoin = Join this Whirled
-detailJoinPrompt = Joining will add this whirled''s discussions to your \
-  My Discussions page and allow this whirled to add messages to the \
+detailJoin = Join this group
+detailJoinPrompt = Joining will add this group''s discussions to your \
+  My Discussions page and allow this group to add messages to the \
   My News section of your Me page.
 detailJoinContext = Would you still like to join "{0}"?
 
-detailLeave = Leave this Whirled
+detailLeave = Leave this group
 detailLeavePrompt = Are you sure you no longer wish to be a member of "{0}"?
 
 detailShop = Shop!
@@ -109,7 +109,7 @@ detailRemove = Remove
 detailRemovePrompt = Are you sure you wish to remove {0} from {1}?
 
 detailTags = Tags:
-detailTagLink = See other Whirleds
+detailTagLink = See other groups
 
 detailTopMembersTitle = Members
 detailTopMembersSeeAll = see all
@@ -121,21 +121,21 @@ detailTabRooms = Rooms
 detailTabDiscussions = Recent Discussions
 
 detailBackToDiscussions = << Back to Discussions
-detailNoCharter = This whirled has nothing to say for itself.
+detailNoCharter = This group has nothing to say for itself.
 
 detailRoomsDetail = These rooms are owned by {0}.  Click a room to enter it.
 detailRoomsTitle = {0}''s Rooms
 detailCallersRoomsTitle = Your Rooms
 detailTransferRoom = Transfer Room to {0}
-detailTransferRoomInfo = Transferring your room to this whirled will allow any manager of the \
-whirled to edit the room. The room will be removed for your rooms list and added to this whirled. \
+detailTransferRoomInfo = Transferring your room to this group will allow any manager of the \
+group to edit the room. The room will be removed for your rooms list and added to this group. \
 You cannot transfer your current home room, and this cannot be undone.
 detailBrowseShop = Shop for related {0}!
 
 #
 # FeaturedWhirled
 
-featuredTitle = Featured Whirled
+featuredTitle = Featured Group
 featuredOnline = {0} online now!
 
 #
@@ -147,7 +147,7 @@ wmpInvite = Invite Someone to Join
 # WhirledDiscussionPanel
 
 discussionRss = Subscribe to<br/>Discussions
-discussionNoThreads = There are no discussions in this whirled yet.
+discussionNoThreads = There are no discussions in this group yet.
 discussionPostedIn = posted in
 discussionPostedBy = posted by
 discussionAt = at {0}
@@ -161,13 +161,18 @@ myMembersOnline = {0} online now!
 myUnreadThreads = {0} unread threads
 myLatestThread = Latest thread:
 myDiscussions = View All Discussions
-myManagerStarTitle = You are a manager of this whirled
+myManagerStarTitle = You are a manager of this group
 myPostedBy = by
 myToday = Today
-myNoWhirleds = You haven''t joined any whirleds yet.
+myNoWhirleds = You haven''t joined any groups yet.
 
 mySortBy = Sort by:
 mySortByPeopleOnline = People Online
-mySortByName = Whirled Name
-mySortByManager = Whirleds I Manage
+mySortByName = Group Name
+mySortByManager = Groups I Manage
 mySortByNewestPost = Newest Post
+
+myHeaderName = Name
+myHeaderLatest = Latest Post
+myHeaderThreadCount = Threads
+myHeaderPostCount = Posts
