--- a/src/gwt/client/help/HelpMessages.properties
+++ b/src/gwt/client/help/HelpMessages.properties
@@ -8,7 +8,7 @@
 
 helpIntro = <h2>Thank you</h2> for helping us test out Whirled! It is still a work in \
   progress, so bugs are bound to pop up every now and then.  We appreciate your \
-  <a href="#whirleds-f_72">bug reports</a> and <a href="#whirleds-f_19">feedback</a>.
+  <a href="#groups-f_72">bug reports</a> and <a href="#groups-f_19">feedback</a>.
 
 helpWikiTitle = Whirled Wiki
 helpWiki = The <a href="http://wiki.whirled.com">Whirled Wiki</a> is your source for \
@@ -18,18 +18,18 @@ helpWiki = The <a href="http://wiki.whirled.com">Whirled Wiki</a> is your source
 helpQuestionsTitle = Frequently Asked Questions
 helpQuestionsIntro = If you have questions you don''t see answered here, check out the \
   <a href="http://wiki.whirled.com/Frequently_asked_questions">Whirled Wiki FAQ</a> \
-  or the <a href="#whirleds-f_19">Brave New Whirled</a> message boards to ask \
+  or the <a href="#groups-f_19">Brave New Whirled</a> message boards to ask \
   a specific question and someone will help you out!
 helpQuestions = <h3>What is Whirled?</h3> <ul> \
   <li>Whirled is a place where you can play <a href="#games">games</a>, make \
   <a href="#people">friends</a> and design your own <a href="#world-home">rooms</a>. \
   Everything in Whirled is created by the people who play it: the places, games, avatars, \
   toys, and pets, so Whirled is whatever <i>you</i> want it to be.</li> \
-  <li><i>Whirleds</i> in Whirled are clubs for people with a shared interest to hang out and \
-  chat.  You can <a href="#whirleds">find one</a> now, \
-  or <a href="#whirleds-edit">create your own</a> and invite your friends to join.  Every game \
-  has it''s own Whirled where you can discuss the game or find people to play with.  Read \
-  more about Whirleds on our wiki <a href="http://wiki.whirled.com/Whirleds_tab">here</a> \
+  <li><i>Groups</i> in Whirled are clubs for people with a shared interest to hang out and \
+  chat.  You can <a href="#groups">find one</a> now, \
+  or <a href="#groups-edit">create your own</a> and invite your friends to join.  Every game \
+  has it''s own group where you can discuss the game or find people to play with.  Read \
+  more about groups on our wiki <a href="http://wiki.whirled.com/Whirleds_tab">here</a> \
   and <a href="http://wiki.whirled.com/Whirleds">here</a>.</li> \
   </ul> \
   <h3>How do I find friends?</h3> <ul> \
@@ -82,9 +82,9 @@ helpQuestions = <h3>What is Whirled?</h3> <ul> \
   clicking the Home icon under the <a href="#me">Me</a> tab.  To create a new room, first add \
   a door to your home, then select it and in the Arranging Room menu click Make Door.  Next \
   click on Purchase a new room, then click on your new door to go to it.  </li> \
-  <li>To add a room to a Whirled, you need to go to a Whirled that you manage and click \
+  <li>To add a room to a group, you need to go to a group that you manage and click \
   Manage Rooms, then give one of your extra rooms to the Whirled (you can''t get it back!). \
-  Read more about Whirleds on our wiki <a href="http://wiki.whirled.com/Whirleds_tab">here</a> \
+  Read more about groups on our wiki <a href="http://wiki.whirled.com/Whirleds_tab">here</a> \
   and <a href="http://wiki.whirled.com/Whirleds">here</a>.</li> \
   </ul> \
   <h3>How do pets work?</h3> <ul> \
