--- a/src/gwt/client/msgs/MsgsMessages.properties
+++ b/src/gwt/client/msgs/MsgsMessages.properties
@@ -28,11 +28,11 @@ friendReplyBody = Your friendship invitation to "{0}" was accepted, and they are
 #
 # GroupInvite
 
-groupInviteTo = Invite to Whirled:
-groupInvitation = You have received an invitation to become a member of the Whirled "{0}". You may \
-  join the Whirled by clicking on the button below, or you can reply to this message if you have \
+groupInviteTo = Invite to group:
+groupInvitation = You have received an invitation to become a member of the group "{0}". You may \
+  join the group by clicking on the button below, or you can reply to this message if you have \
   any questions for the person who invited you.
-groupAlreadyMember = This was an invitation to the Whirled "{0}", which you have since joined.
+groupAlreadyMember = This was an invitation to the group "{0}", which you have since joined.
 groupBtnJoin = Yes, I want to join!
 
 #
@@ -72,9 +72,9 @@ msgNewThreadPosted = New thread posted.
 
 noThreads = There are no discussion threads.
 
-noUnreadThreads = None of the Whirleds of which you are a member have new discussion \
-  messages.<br/><br/>You can go to the <a href="#whirleds">Whirleds</a> \
-  page to find and join new Whirleds or to read old messages.
+noUnreadThreads = None of the groups of which you are a member have new discussion \
+  messages.<br/><br/>You can go to the <a href="#groups">groups</a> \
+  page to find and join new groups or to read old messages.
 
 tlpStartNewThread = Start New Thread
 tlpRefresh = Refresh
@@ -144,7 +144,7 @@ ntpSubject = Subject:
 
 ntpAnnounce = Announcement:
 ntpAnnounceTip = Announcement threads are specially marked and cause a message to be \
-  posted to the feed of all members of this whirled.
+  posted to the feed of all members of this group.
 ntpMustAnnounceTip = This is the global announcements group. All threads are \
   posted as announcements.
 
