Corrected misspelled name

--- a/src/gwt/client/help/HelpMessages.properties
+++ b/src/gwt/client/help/HelpMessages.properties
@@ -146,7 +146,7 @@ helpTeamTitle = Whirled Team
 helpTeamEngineers = <h3>Engineering</h3>
 helpTeamEngineersList = Michael Bayne, Ray Greenwell, Par Winzell, Nathan Curtis, \
   Robert Zubek, Mark Johnson, Tim Conkling, Andrzej Kapolka, Mike Thomas, David Hoover, \
-  Robin Barooah, Jaime Doornbos, Sarah Collins, Matthew Jensen, Kyle Sampson
+  Robin Barooah, Jamie Doornbos, Sarah Collins, Matthew Jensen, Kyle Sampson
 helpTeamArtists = <h3>Art</h3>
 helpTeamArtistsList = Jon Demos, Brittney Lee, Bill Robinson, Rick Keagy, Ian McConville, \
   Nick Popovich, Kate Liu, Sean Keeton
