The page title should be groups. We'll eventually call the tab groups as well, so add that one in for now.

--- a/src/gwt/client/shell/DynamicMessages.properties
+++ b/src/gwt/client/shell/DynamicMessages.properties
@@ -240,7 +240,8 @@ meTitle = Me
 stuffTitle = Stuff
 gamesTitle = Games
 roomsTitle = Rooms
-whirledsTitle = Whirleds
+whirledsTitle = Groups
+groupsTitle = Groups
 shopTitle = Shop
 createTitle = Create
 helpTitle = Help
