I swear we used to have a "Back to Game" button but the subversion history does not lie. In any case, we have one now.

--- a/src/gwt/client/shop/ShopMessages.properties
+++ b/src/gwt/client/shop/ShopMessages.properties
@@ -75,18 +75,6 @@ msgListingUseIt = Use it now!
 
 errListingNotFound = Unable to find shop listing to delist.
 
-boughtTitle = {0} Purchased!
-timesBought = Bought: {0}
-
-boughtViewStuff = You can find your new {0} in:
-boughtGoNow = Me -> My Stuff -> {0}
-
-boughtAvatarUsage = Click above to wear your new avatar now!
-boughtDecorUsage = Click above to use your new backdrop now!
-boughtAudioUsage = Click above to use your new song as the soundtrack for this room!
-boughtPetUsage = Click above to add your new pet to this room!
-boughtOtherUsage = Click above to add your new item to this room!
-
 favoritesCount = Favorites:
 
 buyBars = Get Bars
@@ -94,7 +82,25 @@ buyBars = Get Bars
 limitedPurchases = {0} of {1}
 
 #
+# BuyPanel
+
+boughtTitle = {0} Purchased!
+timesBought = Bought: {0}
+
+boughtViewStuff = You can find your new {0} in:
+boughtGoNow = Me -> My Stuff -> {0}
+
+boughtBackTo = Back to Game
+
+boughtAvatarUsage = Click above to wear your new avatar now!
+boughtDecorUsage = Click above to use your new backdrop now!
+boughtAudioUsage = Click above to use your new song as the soundtrack for this room!
+boughtPetUsage = Click above to add your new pet to this room!
+boughtOtherUsage = Click above to add your new item to this room!
+
+#
 # BuyRemixPanel
+
 buyRemixTitle = Buy this remix?
 buyRemixPrompt = You must buy this item to save your changes.
 
