--- a/build.xml
+++ b/build.xml
@@ -55,6 +55,7 @@
     <file name="${extlibs.dir}/activation.jar"/>
     <file name="${extlibs.dir}/aopalliance.jar"/>
     <file name="${extlibs.dir}/args4j-2.0.7.jar"/>
+    <file name="${extlibs.dir}/backport-util-concurrent-3.1-jdk1.6.jar"/>
     <file name="${extlibs.dir}/commons-beanutils.jar"/>
     <file name="${extlibs.dir}/commons-codec.jar"/>
     <file name="${extlibs.dir}/commons-collections.jar"/>
