Show the social status on the msoy support page and allow staff to change the value

--- a/src/gwt/client/support/SupportMessages.properties
+++ b/src/gwt/client/support/SupportMessages.properties
@@ -34,3 +34,8 @@ submitSuccessMsg = Your Support Request has been submitted to our Support Team. 
   receive a mail notification when the request has been updated.
 
 errMissingEmail = Please enter a valid e-mail address
+
+adminSocialStatus = Social Status:
+adminSocialStatus0 = Normal
+adminSocialStatus1 = Greeter
+adminSocialStatus2 = Troublemaker
