Track clicks on feed items and show more/less.

--- a/src/gwt/client/shell/DynamicMessages.properties
+++ b/src/gwt/client/shell/DynamicMessages.properties
@@ -371,7 +371,7 @@ m_game_plays_bling_awarded = Game developer bling pool award for <a href="/#game
 #
 # Me page / Profile News Feed categories (see FeedMessageType.Category)
 
-feedCategory0 = Whirled Announcements
+feedCategory0 = Whirled & Group Announcements
 feedCategory1 = Comments
 feedCategory2 = Friendings
 feedCategory3 = New Shop Listings
