--- a/src/gwt/landing.gwt.xml.in
+++ b/src/gwt/landing.gwt.xml.in
@@ -19,7 +19,7 @@
   <source path="client/trophy"/>
   <source path="client/games"/>
   <source path="client/msgs"/>
-  <source path="client/whirleds"/>
+  <source path="client/groups"/>
   <source path="client/landing"/>
 
   <public path="public/landing"/>
