--- a/build.xml
+++ b/build.xml
@@ -211,7 +211,7 @@
 
   <!-- enumerate our translation files -->
   <property name="msgs1.list" value="shell.Shell,account.Account,adminz.Admin,shop.Shop"/>
-  <property name="msgs2.list" value="games.Games,whirleds.Whirleds,stuff.Stuff,editem.Editem"/>
+  <property name="msgs2.list" value="games.Games,groups.Groups,stuff.Stuff,editem.Editem"/>
   <property name="msgs3.list" value="item.Item,mail.Mail,msgs.Msgs,people.People,swiftly.Swiftly"/>
   <property name="msgs4.list" value="room.Room,rooms.Rooms,me.Me,remix.Remix,help.Help"/>
   <property name="msgs5.list" value="support.Support,landing.Landing,person.Person"/>
