Any sufficiently confusing feature is indistinguishable from a bug.

--- a/src/gwt/client/games/GamesMessages.properties
+++ b/src/gwt/client/games/GamesMessages.properties
@@ -175,7 +175,7 @@ whyPlayBlurb = <ul> \
 
 genreAllGames = All Games
 
-genreFindGame = Find a Game Fast
+genreFindGame = Top 200 Games
 genreSearch = Search for Games
 genreNoGames = There are no games that match your search.
 
