Display greeters in the friends panel

--- a/src/gwt/client/me/MeMessages.properties
+++ b/src/gwt/client/me/MeMessages.properties
@@ -58,6 +58,8 @@ nextFindTip = Search by real name, Whirled name or email address.
 
 nextFriendClick = Click a friend to visit!
 
+nextGreeterClick = Meet new people!
+
 nextPassportTip = Click "GO" on these Whirled Passport stamps to go right to the fun, and earn \
   coins at the same time!
 nextBadgesSeeAll = See all
