--- a/src/gwt/client/people/PeopleMessages.properties
+++ b/src/gwt/client/people/PeopleMessages.properties
@@ -27,7 +27,7 @@ profileSelfTitle = My Profile
 
 profileNoSuchMember = That Whirled member could not be found.
 
-profileGreeterLabel = Whirled Greeter
+profileGreeterLabel = Socialite
 
 #
 # RoomsPanel
@@ -65,9 +65,9 @@ eage = Show age
 ebirthday = Birthday
 esex = Sex
 elocation = Location
-egreeterLabel = Whirled Greeter
-egreeterTip = Tick here to help newcomers find their way around whirled. You will get a special \
-    name tag and automatically accept friend requests.
+egreeterLabel = Socialite
+egreeterTip = Tick here to help newcomers find their way around whirled. Your name will be \
+    displayed to new players and you will automatically accept all friend invitations.
 
 sexMale = Male
 sexFemale = Female
