Oops, this is needed too

--- a/src/gwt/client/people/PeopleMessages.properties
+++ b/src/gwt/client/people/PeopleMessages.properties
@@ -256,6 +256,7 @@ ifriendMessage = Message:
 ifriendDefMessage = Let''s be buddies!
 ifriendSend = Send
 ifriendSent = Friend request sent.
+ifriendAdded = Friend added.
 
 #
 # GalleryPanel
