Added greeters to the friends panel if the friend count is below a certain level. Change the member list title according to whether the list is all friends, all greeters or a mix

--- a/src/gwt/client/people/PeopleMessages.properties
+++ b/src/gwt/client/people/PeopleMessages.properties
@@ -185,6 +185,8 @@ friendsSelfTitle = My Friends
 friendsNoSuchMember = That person could not be found.
 
 friendsWhoseFriends = {0}''s Friends
+friendsWhoseGreeters = Friendly People
+friendsWhoseFriendsAndGreeters = {0}''s Friends And Friendly People
 
 #
 # InvitePanel
