Friendly people 1.0 ready for general consumption. Known issues: * List of friendly people is only available in web client * After adding a friend in the web client, the "Add friend" link does not change or disappear * If a friendly friend is removed from the friends panel, he does not reappear as a friendly non-friend

--- a/src/gwt/client/people/PeopleMessages.properties
+++ b/src/gwt/client/people/PeopleMessages.properties
@@ -27,7 +27,7 @@ profileSelfTitle = My Profile
 
 profileNoSuchMember = That Whirled member could not be found.
 
-profileGreeterLabel = Socialite
+profileGreeterLabel = Friendly Person
 
 #
 # RoomsPanel
@@ -65,9 +65,9 @@ eage = Show age
 ebirthday = Birthday
 esex = Sex
 elocation = Location
-egreeterLabel = Socialite
-egreeterTip = Tick here to help newcomers find their way around whirled. Your name will be \
-    displayed to new players and you will automatically accept all friend invitations.
+egreeterLabel = Friendly
+egreeterTip = Tick here to become a whirled Friendly Person. Your name will be displayed to new \
+	players and you will automatically accept all friend requests.
 
 sexMale = Male
 sexFemale = Female
