--- a/src/gwt/client/support/SupportMessages.properties
+++ b/src/gwt/client/support/SupportMessages.properties
@@ -37,5 +37,5 @@ errMissingEmail = Please enter a valid e-mail address
 
 adminSocialStatus = Social Status:
 adminSocialStatus0 = Normal
-adminSocialStatus1 = Greeter
+adminSocialStatus1 = Friendly Person
 adminSocialStatus2 = Troublemaker
