First part of WRLD-452: revamping the main groups page.  Still TODO: sorting groups grid, displaying more info if feasable, a few other changes.  Moved Featured Groups panel to Landing as it is only used there now.

--- a/src/gwt/client/groups/GroupsMessages.properties
+++ b/src/gwt/client/groups/GroupsMessages.properties
@@ -48,16 +48,11 @@ errTagsOnExclusive = In order to change the group policy to Exclusive, please re
 #
 # GalaxyPanel
 
-galaxyIntro = Groups can be explored or you can just hang out in them and chat \
-  with other players.
+galaxyMyGroupsTitle = My Groups
+galaxyMyGroupsNone = You have no groups
+galaxyMyGroupsDiscussions = view discussions
+galaxyMyGroupsSeeAll = See all...
 
-galaxyCreateTitle = Create a New Group
-galaxyCreateBlurb = If you think you and your friends have the chops to create \
-  an exciting place for people to hang out, then you should create your own \
-  group!
-galaxyCreate = Create New Group
-
-galaxyBrowseTitle = Browse Groups
 galaxySearch = Search
 
 galaxyMemberCount = {0} people online
@@ -68,6 +63,11 @@ galaxyPopularTags = Popular Tags:
 galaxyNoPopularTags = No popular tags found!
 galaxyCurrentTag = Showing: {0}
 galaxyTagClear = clear
+
+galaxyCreateTitle = Create a New Group
+galaxyCreateBlurb = If you think you and your friends have the chops to create \
+  an exciting place for people to hang out, then you should create your own group!
+galaxyCreate = Create New Group
 
 #
 # WhirledDetailPanel
@@ -132,11 +132,7 @@ group to edit the room. The room will be removed for your rooms list and added t
 You cannot transfer your current home room, and this cannot be undone.
 detailBrowseShop = Shop for related {0}!
 
-#
-# FeaturedWhirled
-
-featuredTitle = Featured Group
-featuredOnline = {0} online now!
+detailOnline = {0} online now!
 
 #
 # WhirledMembersPanel
