--- a/src/gwt/client/landing/LandingMessages.properties
+++ b/src/gwt/client/landing/LandingMessages.properties
@@ -48,3 +48,9 @@ dacontestJudging = Contest entries will be judged based on technical skill, orig
   <b>Judges:</b> <a href="#people-8">Cleaver: CEO and Hand-waver</a>, <br />\
   <a href="#people-12">Nemo: Lead Artist</a>, <a href="#people-13">Brittney: Artist</a>, <br /> \
   <a href="#people-316">Billiam: Artist</a>, <a href="#people-12770">Vortex: Lead Agent</a>
+
+#
+# Featured Group panel
+
+featuredGroupTitle = Featured Group
+featuredGroupOnline = {0} online now!
