Add # of members and # of threads to group display on the main groups page - would be lovely to replace the text for these with subtle little icons at some point.

--- a/src/gwt/client/groups/GroupsMessages.properties
+++ b/src/gwt/client/groups/GroupsMessages.properties
@@ -55,7 +55,9 @@ galaxyMyGroupsSeeAll = See all...
 
 galaxySearch = Search
 
-galaxyMemberCount = {0} people online
+galaxyMemberCount = {0} members
+galaxyPeopleInRooms = {0} in hall now
+galaxyThreadCount = {0} threads
 
 galaxyNoGroups = No groups found!
 
