--- a/src/gwt/client/people/PeopleMessages.properties
+++ b/src/gwt/client/people/PeopleMessages.properties
@@ -112,14 +112,14 @@ ratingsSingle = (single player)
 #
 # GroupsBlurb
 
-groupsTitle = Whirleds
+groupsTitle = Groups
 
-notInGroupsOther = This person is not a member of any Whirleds.
-notInGroupsSelf = You''re not a member of any Whirleds. It makes us sad.
-notInGroupsJoin = Join some Whirleds!
+notInGroupsOther = This person is not a member of any Groups.
+notInGroupsSelf = You''re not a member of any Groups. It makes us sad.
+notInGroupsJoin = Join some Groups!
 
 inviteToGroup = Invite
-haveNoGroups = Sorry pardner. You don''t have invite privileges for any Whirleds.
+haveNoGroups = Sorry pardner. You don''t have invite privileges for any Groups.
 
 # GalleriesBlurb
 
