--- a/src/gwt/client/people/PeopleMessages.properties
+++ b/src/gwt/client/people/PeopleMessages.properties
@@ -66,7 +66,7 @@ ebirthday = Birthday
 esex = Sex
 elocation = Location
 egreeterLabel = Friendly
-egreeterTip = Tick here to become a whirled Friendly Person. Your name will be displayed to new \
+egreeterTip = Tick here to become a Whirled Friendly Person. Your name will be displayed to new \
 	players and you will automatically accept all friend requests.
 
 sexMale = Male
