--- a/build.xml
+++ b/build.xml
@@ -680,34 +680,34 @@
     <antcall target="ascompile"><param name="astype" value="remixer"/></antcall>
   </target>
 
-  <!-- builds our video viewer thingy -->
-  <target name="videoviewer" depends="asprepare">
+  <!-- builds our video player -->
+  <target name="videoplayer" depends="asprepare">
     <exec executable="${basedir}/bin/mxmlc" failonerror="true">
       <arg value="-load-config"/>
       <arg value="etc/msoy-config.xml"/>
       <arg value="-compiler.optimize"/>
       <arg value="-compiler.source-path=${asrc.dir}/"/>
       <arg value="-output"/>
-      <arg value="${deploy.dir}/videoviewer.swf"/>
+      <arg value="${deploy.dir}/videoplayer.swf"/>
       <arg value="-file-specs"/>
-      <arg value="${asrc.dir}/VideoViewer.as"/>
+      <arg value="${asrc.dir}/VideoPlayerApp.as"/>
     </exec>
-    <copy file="${deploy.dir}/videoviewer.swf" todir="pages/clients/${version}"/>
+    <copy file="${deploy.dir}/videoplayer.swf" todir="pages/clients/${version}"/>
   </target>
 
-  <!-- builds our music viewer thingy -->
-  <target name="musicviewer" depends="asprepare">
+  <!-- builds our audio player -->
+  <target name="audioplayer" depends="asprepare">
     <exec executable="${basedir}/bin/mxmlc" failonerror="true">
       <arg value="-load-config"/>
       <arg value="etc/msoy-config.xml"/>
       <arg value="-compiler.optimize"/>
       <arg value="-compiler.source-path=${asrc.dir}/"/>
       <arg value="-output"/>
-      <arg value="${deploy.dir}/musicviewer.swf"/>
+      <arg value="${deploy.dir}/audioplayer.swf"/>
       <arg value="-file-specs"/>
-      <arg value="${asrc.dir}/MusicViewer.as"/>
+      <arg value="${asrc.dir}/AudioPlayerApp.as"/>
     </exec>
-    <copy file="${deploy.dir}/musicviewer.swf" todir="pages/clients/${version}"/>
+    <copy file="${deploy.dir}/audioplayer.swf" todir="pages/clients/${version}"/>
   </target>
 
   <!-- builds our neighborhood visualization client -->
@@ -1016,7 +1016,7 @@
   <!-- TODO: the tutorial target has been removed from flashapps until it compiles again after a
        the API shuffle is done, and the tutorial code has been refactored -->
   <!-- builds top-level flash applications. -->
-  <target name="flashapps" depends="asprepare,mediastub,embedstub,videoviewer,musicviewer,remixer"
+  <target name="flashapps" depends="asprepare,mediastub,embedstub,videoplayer,audioplayer,remixer"
           description="Rebuilds all of our Flash clients and applets.">
     <antcall target="ascompile"><param name="astype" value="world"/></antcall>
     <antcall target="ascompile"><param name="astype" value="game"/></antcall>
