Add sort by name/members/date on the groups page.  Refactor tag & full text search to use same servlet call as the default grid data select, and page on the server.

--- a/src/gwt/client/groups/GroupsMessages.properties
+++ b/src/gwt/client/groups/GroupsMessages.properties
@@ -50,7 +50,7 @@ errTagsOnExclusive = In order to change the group policy to Exclusive, please re
 
 galaxyMyGroupsTitle = My Groups
 galaxyMyGroupsNone = You have no groups
-galaxyMyGroupsDiscussions = view discussions
+galaxyMyGroupsDiscussions = discussions
 galaxyMyGroupsSeeAll = See all...
 
 galaxySearch = Search
@@ -65,6 +65,13 @@ galaxyPopularTags = Popular Tags:
 galaxyNoPopularTags = No popular tags found!
 galaxyCurrentTag = Showing: {0}
 galaxyTagClear = clear
+
+galaxySortBy = Sort By:
+sortByNewAndPopular = New & Popular
+sortByName = Alphabetical
+sortByNumMembers = Number of Members
+sortByCreatedDate = Date Created
+sortByRelevance = Search Relevance
 
 galaxyCreateTitle = Create a New Group
 galaxyCreateBlurb = If you think you and your friends have the chops to create \
