Rename more classes whirleds -> groups

--- a/src/gwt/client/groups/GroupsMessages.properties
+++ b/src/gwt/client/groups/GroupsMessages.properties
@@ -1,7 +1,7 @@
 #
 # $Id$
 #
-# Defines Whirleds interface translation strings
+# Defines Groups interface translation strings
 
 #
 # Global bits
@@ -17,7 +17,7 @@ forumPermsManager = Managers
 errUnknownPolicy = Internal Error! Unknown policy type: {0}
 
 groupTitle = Groups
-myWhirledsTitle = My Groups
+myGroupsTitle = My Groups
 forumsTitle = Discussions
 myForumsTitle = My Discussions
 issuesTitle = Issues
@@ -79,7 +79,9 @@ galaxyCreateBlurb = If you think you and your friends have the chops to create \
 galaxyCreate = Create New Group
 
 #
-# WhirledDetailPanel
+# GroupDetailPanel
+
+detailGroupNotFound = That Group could not be found.
 
 detailEnterTip = Click above to enter!
 
@@ -144,12 +146,12 @@ detailBrowseShop = Shop for related {0}!
 detailOnline = {0} online now!
 
 #
-# WhirledMembersPanel
+# GroupMembersPanel
 
 wmpInvite = Invite Someone to Join
 
 #
-# WhirledDiscussionPanel
+# GroupDiscussionPanel
 
 discussionRss = Subscribe to<br/>Discussions
 discussionNoThreads = There are no discussions in this group yet.
@@ -160,7 +162,7 @@ discussionReply = {0} reply
 discussionReplies = {0} replies
 
 #
-# MyWhirleds
+# MyGroups
 
 myMembersOnline = {0} online now!
 myUnreadThreads = {0} unread threads
@@ -169,7 +171,7 @@ myDiscussions = View All Discussions
 myManagerStarTitle = You are a manager of this group
 myPostedBy = by
 myToday = Today
-myNoWhirleds = You haven''t joined any groups yet.
+myNoGroups = You haven''t joined any groups yet.
 
 mySortBy = Sort by:
 mySortByPeopleOnline = People Online
