--- a/pages/index.html.in
+++ b/pages/index.html.in
@@ -11,9 +11,7 @@
     }
   </script>
 
-  <link rel="stylesheet" href="/css/global.css" type="text/css"/>
-  <link rel="stylesheet" href="/css/gwt.css" type="text/css"/>
-  <link rel="stylesheet" href="/css/frame.css" type="text/css"/>
+  <link rel="stylesheet" href="/gwt/frame/global.css" type="text/css"/>
   <link rel="shortcut icon" href="/favicon.ico" type="image/vnd.microsoft.icon"/>
 </head>
 
