--- a/src/gwt/client/shell/DynamicMessages.properties
+++ b/src/gwt/client/shell/DynamicMessages.properties
@@ -172,7 +172,7 @@ editorWikiLink15 =
 #
 # Image Editing blurb (top below divider)
 
-editorBlurb1 = Images must be GIF, PNG or JPG format.  You can add then to \
+editorBlurb1 = Images must be GIF, PNG or JPG format.  You can add them to \
   <a href="#world-home">your room</a> like furniture, or create a \
   <a href="#people-create">Gallery</a> to display them.  Animated GIFs don''t work inside rooms.
 editorBlurb2 = 
