Added configuration for from_address and agents_address.

--- a/etc/msoy-server.properties.dist
+++ b/etc/msoy-server.properties.dist
@@ -96,6 +96,12 @@ server_root = /export/msoy
 # auto_restart = false
 
 #
+# Email addresses used by the server
+
+from_address = "Whirled Mailbot" <peas@whirled.com>
+agents_address = "Whirled Agents" <msoy-agents@threerings.net>
+
+#
 # Configures the group used to determine who is eligible for issue assignment
 
 # issue_group_id = 0
