Logoff button now navigates you to #account-logon.  It used to refresh the page and send you to #landing only if the current page was members-only, but this was messing with google analytics results.

--- a/src/gwt/client/account/AccountMessages.properties
+++ b/src/gwt/client/account/AccountMessages.properties
@@ -73,6 +73,7 @@ creatingDone = Logging in for the first time...
 # Logon page
 
 logonPageTitle = Logon
+logonPageText = You have been logged out.
 logonPageSubmit = Logon
 
 #
